<resources>
    <string name="app_name">bayfit</string>
    <string name="button_start">Iniciar</string>
    <string name="button_config">Configurações</string>
    <string name="button_history">Histórico</string>
    <string name="button_description_start">Clique para iniciar</string>
    <string name="button_description_stop">Clique para parar</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="cronometer_initial_value">00:00:00</string>
    <string name="duration_time">00:00:00</string>
    <string name="text_rest">Descanso…</string>
    <string name="time_rest_setting">Tempo de descanso</string>
    <string name="time_series_setting">Tempo de Série</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_ok">Ok</string>
    <string name="minutes">MIN</string>
    <string name="seconds">SEG</string>
    <string name="free">Livre</string>
    <string name="time">Tempo</string>
    <string name="points_number_picker">:</string>
    <string name="title_activity_main">HomeActivity</string>
    <string name="congratulations">PARABÉNS</string>
    <string name="time_total">TEMPO TOTAL</string>
    <string name="time_rest">TEMPO DE DESCANSO</string>
    <string name="return_screen_home">RETORNAR</string>
    <string name="data_text">Data</string>
    <string name="race_text">CORRIDA</string>
    <string name="time_total_text">Tempo Total</string>
    <string name="start_text">Início:</string>
    <string name="end_text">Fim:</string>
    <string name="clock">00:00</string>
    <string name="rest_total">DESCANSO TOTAL</string>
    <string name="icon_clock">Ícone de Relógio</string>
    <string name="icon_green_empty_view">Ícone verde da EmptyView</string>
    <string name="no_registry">Sem registros ainda.</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Settings -->
    <string name="time_setting_error_message">Por favor, selecione uma opção</string>
    <string name="time_setting_saved_message">Configuração salva!</string>

</resources>