<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">


        <TextView
            android:id="@+id/icStar"
            android:layout_width="15dp"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_star"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/congratulations"
            android:layout_width="89dp"
            android:layout_height="29dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/congratulations"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_total_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icStar" />

        <TextView
            android:id="@+id/timeEnd"
            android:layout_width="78dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/cronometer_initial_value"
            android:gravity="center"
            android:text="@string/cronometer_initial_value"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_total_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/congratulations" />

        <TextView
            android:id="@+id/time_total"
            android:layout_width="56dp"
            android:layout_height="18dp"
            android:text="@string/time_total"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeEnd" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_rest"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restEnd" />

        <TextView
            android:id="@+id/restEnd"
            android:layout_width="87dp"
            android:layout_height="28dp"
            android:contentDescription="@string/cronometer_initial_value"
            android:gravity="center"
            android:text="@string/cronometer_initial_value"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_total_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_total"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_return"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:text="@string/return_screen_home"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.636" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>