<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/trainingStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large_plus"
                android:gravity="end"
                android:text="@string/clock"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toTopOf="@+id/endTraining"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration_text"/>

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toTopOf="@+id/duration_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="07 Mai 2024" />

            <TextView
                android:id="@+id/duration_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_extra_large"
                android:gravity="center"
                android:text="@string/race_text"
                android:textColor="@color/green"
                app:layout_constraintBottom_toTopOf="@+id/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/start_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large_plus"
                android:text="@string/start_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toTopOf="@+id/end_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration_text" />

            <TextView
                android:id="@+id/end_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large_plus"
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:text="@string/end_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toTopOf="@+id/icon"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/endTraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large_plus"
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:gravity="end"
                android:text="@string/clock"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toTopOf="@+id/icon"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/ic_clock"
                android:contentDescription="@string/icon_clock"
                app:layout_constraintBottom_toTopOf="@+id/timeTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/timeTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_secondary_timer"
                app:layout_constraintBottom_toTopOf="@+id/text_time_total"
                tools:text="00:00:00" />

            <TextView
                android:id="@+id/text_time_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/time_total"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toTopOf="@+id/icon2" />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@drawable/ic_clock"
                android:contentDescription="@string/icon_clock"
                app:layout_constraintBottom_toTopOf="@+id/timeRestTotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/timeRestTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_extra_small"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_secondary_timer"
                app:layout_constraintBottom_toTopOf="@+id/text_time_rest_total"
                tools:layout_editor_absoluteX="0dp"
                tools:text="00:00:00" />

            <TextView
                android:id="@+id/text_time_rest_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/rest_total"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_timer_small"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>