<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".FragmentTimerCountType">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/buttonOkcountType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                android:fontFamily="sans-serif"
                android:text="@string/free"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_secondary_timer" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_secondary_timer" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOkcountType"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_large"
            android:layout_marginBottom="32dp"
            android:background="@drawable/background_button"
            android:text="@string/button_ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_secondary_timer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>