<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".home.view.ExerciseReportFragment">


        <TextView
            android:id="@+id/start_training"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:gravity="end"
            android:text="@string/clock"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintBottom_toTopOf="@+id/end_training"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_text"/>

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/data"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/duration_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/duration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:gravity="center"
            android:text="@string/race_text"
            android:textColor="@color/green"
            app:layout_constraintBottom_toTopOf="@+id/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/start_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/start_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintBottom_toTopOf="@+id/end_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_text"/>

        <TextView
            android:id="@+id/end_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="4dp"
            android:text="@string/end_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintBottom_toTopOf="@+id/icon"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/end_training"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="4dp"
            android:gravity="end"
            android:text="@string/clock"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintBottom_toTopOf="@+id/icon"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginBottom="10dp"
            android:width="20dp"
            android:height="20dp"
            android:background="@drawable/ic_clock"
            app:layout_constraintBottom_toTopOf="@+id/time_total"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/time_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_total_exercise"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_secondary_timer"
            app:layout_constraintBottom_toTopOf="@+id/text_time_total"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/text_time_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_total"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintBottom_toTopOf="@+id/icon2"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/icon2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:width="20dp"
            android:height="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_clock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/time_rest_total"
            tools:layout_editor_absoluteY="186dp" />

        <TextView
            android:id="@+id/time_rest_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_total_exercise"
            android:layout_marginBottom="4dp"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_secondary_timer"
            app:layout_constraintBottom_toTopOf="@+id/text_time_rest_total"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/text_time_rest_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/rest_total"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_timer_small"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>